Fixed Engagements cards not aligned error

--- a/app/(routes)/alumni/alumni.module.scss
+++ b/app/(routes)/alumni/alumni.module.scss
@@ -55,7 +55,7 @@
 
 .alumniEngagementsCardsContainer {
   display: flex;
-  align-items: center;
+  // align-items: center;
   flex-direction: row;
   justify-content: center;
 }
